--- a/panels/power/cc-power-panel.ui
+++ b/panels/power/cc-power-panel.ui
@@ -156,6 +156,14 @@
                   </object>
                 </child>
                 <child>
+                  <object class="AdwSwitchRow" id="power_saver_screen_off_row">
+                    <property name="visible">False</property>
+                    <property name="title" translatable="yes">Screen off Power _Saver</property>
+                    <property name="subtitle" translatable="yes">Turn on power saver mode when screen is off</property>
+                    <property name="use_underline">True</property>
+                  </object>
+                </child>
+                <child>
                   <object class="CcListRow" id="automatic_suspend_row">
                     <property name="visible">False</property>
                     <property name="title" translatable="yes">_Automatic Suspend</property>
