--- a/panels/display/cc-display-panel.ui
+++ b/panels/display/cc-display-panel.ui
@@ -157,6 +157,38 @@
                         <property name="use_underline">True</property>
                       </object>
                     </child>
+                    <child>
+                      <object class="AdwSwitchRow" id="swipe_up_row">
+                        <property name="visible">False</property>
+                        <property name="title" translatable="yes">Swipe up to wake up</property>
+                        <property name="subtitle" translatable="yes">Wake up the screen by swiping up</property>
+                        <property name="use_underline">True</property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="AdwSwitchRow" id="swipe_down_row">
+                        <property name="visible">False</property>
+                        <property name="title" translatable="yes">Swipe down to wake up</property>
+                        <property name="subtitle" translatable="yes">Wake up the screen by swiping down</property>
+                        <property name="use_underline">True</property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="AdwSwitchRow" id="swipe_left_row">
+                        <property name="visible">False</property>
+                        <property name="title" translatable="yes">Swipe left to wake up</property>
+                        <property name="subtitle" translatable="yes">Wake up the screen by swiping left</property>
+                        <property name="use_underline">True</property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="AdwSwitchRow" id="swipe_right_row">
+                        <property name="visible">False</property>
+                        <property name="title" translatable="yes">Swipe right to wake up</property>
+                        <property name="subtitle" translatable="yes">Wake up the screen by swiping right</property>
+                        <property name="use_underline">True</property>
+                      </object>
+                    </child>
                   </object>
                 </child>
 
